[gd_scene load_steps=66 format=2]

[ext_resource path="res://scenes/enemies/Boss3.gd" type="Script" id=1]
[ext_resource path="res://images/spritesheets/Boss3/Run.png" type="Texture" id=2]
[ext_resource path="res://shaders/Flash.tres" type="Material" id=3]
[ext_resource path="res://images/spritesheets/Boss3/Attack2.png" type="Texture" id=4]
[ext_resource path="res://images/spritesheets/Boss3/Idle.png" type="Texture" id=5]
[ext_resource path="res://images/spritesheets/Boss3/Attack3.png" type="Texture" id=6]
[ext_resource path="res://images/spritesheets/Boss3/Jump.png" type="Texture" id=7]
[ext_resource path="res://images/spritesheets/Boss3/Attack1.png" type="Texture" id=8]
[ext_resource path="res://images/spritesheets/Boss3/Fall.png" type="Texture" id=9]
[ext_resource path="res://images/spritesheets/Boss3/Attack4.png" type="Texture" id=10]
[ext_resource path="res://images/spritesheets/Boss3/Take Hit.png" type="Texture" id=11]
[ext_resource path="res://images/spritesheets/Boss3/Death.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Attack3",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Attack4",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Attack2",
"speed": 2.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Attack1",
"speed": 4.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "Hit",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=48]
radius = 34.9356
height = 52.11

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 77.7401, 60.2902 )

[sub_resource type="CircleShape2D" id=50]
radius = 120.142

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 110, 10 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 100.5, 108 )

[sub_resource type="CapsuleShape2D" id=53]
radius = 38.9957
height = 49.6384

[node name="Boss3" type="KinematicBody2D"]
material = ExtResource( 3 )
position = Vector2( 685.622, 374.683 )
collision_layer = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
SPEED = 150
HEALTH = 30
JUMPFORCE = 1024
GRAVITY = 16
GOLD_CAP = 70

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( 3, 3 )
frames = SubResource( 47 )
animation = "Idle"
frame = 3
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.00918, -2.00176 )
shape = SubResource( 48 )

[node name="AttackCollision" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="area" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -88.2401, 0.823368 )
shape = SubResource( 49 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Attack_timer" type="Timer" parent="AttackCollision/area"]
wait_time = 0.5
one_shot = true

[node name="area2" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -96.9056, -27.935 )
shape = SubResource( 50 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Attack_timer2" type="Timer" parent="AttackCollision/area2"]
one_shot = true

[node name="area3" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -88.5, -2.5 )
shape = SubResource( 51 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Attack_timer3" type="Timer" parent="AttackCollision/area3"]
wait_time = 0.67
one_shot = true

[node name="area4" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -116, -47.5 )
shape = SubResource( 52 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Attack_timer4" type="Timer" parent="AttackCollision/area4"]
wait_time = 0.5
one_shot = true

[node name="body" type="CollisionShape2D" parent="AttackCollision"]
visible = false
position = Vector2( -1.50162, -2.15056 )
shape = SubResource( 53 )

[node name="Cooldown" type="Timer" parent="AttackCollision/body"]
one_shot = true

[node name="Attack_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Turn_cooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="RayWall" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -150, 0 )
collide_with_areas = true

[node name="RayBehind" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 2

[node name="RayAbove" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( 0, -250 )
collision_mask = 2

[node name="Effect_dmg" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AttackCollision" to="." method="_on_AttackCollision_body_entered"]
[connection signal="timeout" from="AttackCollision/area/Attack_timer" to="." method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="AttackCollision/area2/Attack_timer2" to="." method="_on_Attack_timer2_timeout"]
[connection signal="timeout" from="AttackCollision/area3/Attack_timer3" to="." method="_on_Attack_timer3_timeout"]
[connection signal="timeout" from="AttackCollision/area4/Attack_timer4" to="." method="_on_Attack_timer4_timeout"]
[connection signal="timeout" from="AttackCollision/body/Cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_Attack_cooldown_timeout"]
[connection signal="timeout" from="Turn_cooldown" to="." method="_on_Turn_cooldown_timeout"]
